<resources>
    <string name="app_name">Antiflood Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_device_settings">Device Settings</string>

    <string name="open_btn">Open</string>
    <string name="close_btn">Close</string>
    <string name="echo_btn">Echo</string>
    <string name="stats_btn">Stats</string>
    <string name="time_btn">Time</string>
    <string name="sync_btn">Sync</string>
    <string name="reset_btn">Reset</string>

    <string name="logs_view">Logs</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_device_settings">Antiflood Board Settings</string>

    <!-- Main Settings Titles -->
    <string name="messages_header">Host Settings</string>
    <string name="sync_header">Other Settings</string>

    <!-- Main Settings - Host Preferences -->
    <string name="host_ip">Host IP Address</string>
    <string name="host_port">Host Port</string>

    <string name="host_ip_key">host_ip</string>
    <string name="host_port_key">host_port</string>

    <!-- Main Settings - Other Preferences -->
    <string name="sync_socket_timeout">Manual Socket Timeout</string>
    <string name="timeout">Socket Live Time</string>

    <string name="timeout_key">socket_timeout</string>

    <!-- Device Settings Titles -->
    <string name="device_first_header">Server Settings</string>
    <string name="device_second_header">WIFI Settings</string>
    <string name="device_third_header">WIFI Password</string>
    <string name="device_fourth_header">NTP Setting</string>

    <!-- Device Settings Buttons -->
    <string name="load_eeprom_key">Load</string>
    <string name="store_eeprom_key">Store</string>

    <!-- Device Settings - Server Preferences -->
    <string name="server_ip">Server IP Address</string>
    <string name="server_port">Server Port</string>

    <string name="server_ip_key">device_server_ip</string>
    <string name="server_port_key">device_server_port</string>

    <!-- Device Settings - WIFI Preferences -->
    <string name="wifi_mode">WIFI Mode</string>
    <string name="wifi_channel">WIFI Channel</string>
    <string name="wifi_auth">WIFI Authentication </string>
    <string name="wifi_ssid">WIFI SSID</string>

    <string name="wifi_mode_key">device_wifi_mode</string>
    <string name="wifi_channel_key">device_wifi_ch</string>
    <string name="wifi_auth_key">device_wifi_auth</string>
    <string name="wifi_ssid_key">device_wifi_ssid</string>

    <!-- Device Settings - NTP Preferences -->
    <string name="ntp_pool_domain">NTP Pool Domain</string>
    <string name="ntp_pool_key">device_ntp_pool</string>

</resources>
