<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="@string/host_ip_key"
            app:title="@string/host_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="@string/host_port_key"
            android:singleLine="true"
            android:title="@string/host_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_socket_timeout" />

        <ListPreference
            app:dependency="sync"
            android:key="@string/timeout_key"
            android:title="@string/timeout"
            android:entries="@array/timeoutAlias"
            android:entryValues="@array/timeoutValues"/>

    </PreferenceCategory>

</PreferenceScreen>
